--- a/Ciclo 2/Fundamentos de Programacion II/Semana 3/SoftAlmacen/SoftAlmacen/nbproject/private/private.properties
+++ b/Ciclo 2/Fundamentos de Programacion II/Semana 3/SoftAlmacen/SoftAlmacen/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Mperez\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=C:\\Users\\kevin\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
