Interfaz integrando vector

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/Convertidor/nbproject/private/
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/Convertidor/build/
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/Convertidor/dist/
+/Ciclo 2/Fundamentos de Programacion II/Semana 4/AlmacenVector/nbproject/private/
+/Ciclo 2/Fundamentos de Programacion II/Semana 4/AlmacenVector/build/
+/Ciclo 2/Fundamentos de Programacion II/Semana 4/AlmacenVector/dist/
