--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/AlmacenVector/nbproject/private/
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/AlmacenVector/build/
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/AlmacenVector/dist/
+/Ciclo 2/Fundamentos de Programacion II/Semana 4/Reto2Semana4/nbproject/private/
+/Ciclo 2/Fundamentos de Programacion II/Semana 4/Reto2Semana4/build/
