--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/AlmacenVector/dist/
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/Reto2Semana4/nbproject/private/
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/Reto2Semana4/build/
+/Ciclo 2/Fundamentos de Programacion II/Semana 4/prueba/nbproject/private/
+/Ciclo 2/Fundamentos de Programacion II/Semana 4/prueba/build/
