--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/Reto2Semana4/build/
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/prueba/nbproject/private/
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/prueba/build/
+/Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftPruebasUnitarias/nbproject/private/
+/Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftPruebasUnitarias/build/
