--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Ciclo 2/Fundamentos de Programacion II/Semana 4/prueba/build/
 /Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftPruebasUnitarias/nbproject/private/
 /Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftPruebasUnitarias/build/
+/Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftAlmacenPruebas/nbproject/
