--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftPruebasUnitarias/nbproject/private/
 /Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftPruebasUnitarias/build/
 /Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftAlmacenPruebas/nbproject/
+/Ciclo 2/Fundamentos de Programacion II/Semana 6/Reto3Variante3/nbproject/private/
