--- a/Ciclo 2/Fundamentos de Programacion II/Semana 5/Reto3Variante3/nbproject/project.properties
+++ b/Ciclo 2/Fundamentos de Programacion II/Semana 5/Reto3Variante3/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/prueba.jar
+dist.jar=${dist.dir}/Reto3Variante3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/prueba
+dist.jlink.output=${dist.jlink.dir}/Reto3Variante3
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=prueba
-main.class=prueba.Main
+jlink.launcher.name=Reto3Variante3
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
