--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftPruebasUnitarias/build/
 /Ciclo 2/Fundamentos de Programacion II/Semana 5/SoftAlmacenPruebas/nbproject/
 /Ciclo 2/Fundamentos de Programacion II/Semana 6/Reto3Variante3/nbproject/private/
+/Ciclo 2/Fundamentos de Programacion II/Semana 6/Reto4Variante3/nbproject/private/
+/Ciclo 2/Fundamentos de Programacion II/Semana 6/Reto4Variante3/build/
