--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /Ciclo 2/Fundamentos de Programacion II/Semana 6/Reto4Variante3/build/
 /Ciclo 3/Sprint 1 Mintic Ciclo 3/
 /Ciclo 3/Sprint 2 Mintic Ciclo 3/
+/Ciclo 3/Metodologia/
